Trying to figure out some pathfinder settings that work

--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -1,6 +1,6 @@
 {
-  "robotWidth": 0.014,
-  "robotLength": 0.014,
+  "robotWidth": 0.1,
+  "robotLength": 0.1,
   "holonomicMode": false,
   "pathFolders": [],
   "autoFolders": [],
@@ -10,14 +10,14 @@
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
   "robotMass": 0.5,
-  "robotMOI": 6.883,
+  "robotMOI": 11.0,
   "robotTrackwidth": 0.142,
   "driveWheelRadius": 0.035,
   "driveGearing": 5.143,
-  "maxDriveSpeed": 1.0,
-  "driveMotorType": "miniCIM",
-  "driveCurrentLimit": 1.0,
-  "wheelCOF": 1.2,
+  "maxDriveSpeed": 5.0,
+  "driveMotorType": "CIM",
+  "driveCurrentLimit": 4.0,
+  "wheelCOF": 21.4,
   "flModuleX": 0.273,
   "flModuleY": 0.273,
   "frModuleX": 0.273,
