--- a/src/main/deploy/pathplanner/settings.json
+++ b/src/main/deploy/pathplanner/settings.json
@@ -9,15 +9,15 @@
   "defaultMaxAngVel": 540.0,
   "defaultMaxAngAccel": 720.0,
   "defaultNominalVoltage": 12.0,
-  "robotMass": 0.5,
-  "robotMOI": 11.0,
-  "robotTrackwidth": 0.142,
+  "robotMass": 1.0,
+  "robotMOI": 3.0,
+  "robotTrackwidth": 0.141,
   "driveWheelRadius": 0.035,
-  "driveGearing": 5.143,
-  "maxDriveSpeed": 5.0,
-  "driveMotorType": "CIM",
-  "driveCurrentLimit": 4.0,
-  "wheelCOF": 21.4,
+  "driveGearing": 120.0,
+  "maxDriveSpeed": 0.6,
+  "driveMotorType": "miniCIM",
+  "driveCurrentLimit": 1.0,
+  "wheelCOF": 11.5,
   "flModuleX": 0.273,
   "flModuleY": 0.273,
   "frModuleX": 0.273,
